src/test/deca/syntax/invalid/float_trop_long.deca
{

float f = 218902478970897023976809473092784048306890746758342378094309.84307820;

}